// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings component: off 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <input
            aria-describedby="generated-id-help"
            checked={false}
            className="euiSwitch__input"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <span
            className="euiSwitch__body"
          >
            <span
              className="euiSwitch__thumb"
            />
            <span
              className="euiSwitch__track"
            >
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </span>
          <label
            className="euiSwitch__label"
            htmlFor="generated-id"
          >
            Hide Toolbar
          </label>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings component: on 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <input
            aria-describedby="generated-id-help"
            checked={true}
            className="euiSwitch__input"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <span
            className="euiSwitch__body"
          >
            <span
              className="euiSwitch__thumb"
            />
            <span
              className="euiSwitch__track"
            >
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </span>
          <label
            className="euiSwitch__label"
            htmlFor="generated-id"
          >
            Hide Toolbar
          </label>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shareables/Footer/Settings/ToolbarSettings contextual 1`] = `
<div
  className="kbnCanvas"
  style={
    Object {
      "background": "#fff",
      "border": "1px solid #ccc",
      "height": 124,
      "overflow": "hidden",
      "padding": 16,
      "position": "relative",
      "width": 256,
    }
  }
>
  <div
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <div
      className="euiFormRow"
    >
      <div
        className="euiFormRow__fieldWrapper"
      >
        <div
          className="euiSwitch"
        >
          <input
            aria-describedby="generated-id-help"
            checked={false}
            className="euiSwitch__input"
            data-test-subj="hideToolbarSwitch"
            id="generated-id"
            name="toolbarHide"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <span
            className="euiSwitch__body"
          >
            <span
              className="euiSwitch__thumb"
            />
            <span
              className="euiSwitch__track"
            >
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
              <svg
                className="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height={16}
                style={null}
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </span>
          <label
            className="euiSwitch__label"
            htmlFor="generated-id"
          >
            Hide Toolbar
          </label>
        </div>
        <div
          className="euiFormHelpText euiFormRow__text"
          id="generated-id-help"
        >
          Hide the toolbar when the mouse is not within the Canvas?
        </div>
      </div>
    </div>
  </div>
</div>
`;
